fix: corregir bugs críticos del backend
- fix: mapeo manual de mentor.user.name en MentorProfileResponse (siempre era null)
- fix: mapeo manual de MentorshipSessionResponse desde booking anidado
- fix: agregar @Secured(ROLE_MENTOR) en endpoints de escritura de mentor
- fix: CORS configurable via variable CORS_ALLOWED_ORIGINS
- fix: security rule cambiada de /api/bookings/** a /api/sessions/**
- fix: agregar estado COMPLETED a BookingStatus
- fix: ampliar caracteres especiales permitidos en validación de contraseña

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>